--- a/S2_LC_Taller_SVD.ipynb
+++ b/S2_LC_Taller_SVD.ipynb
@@ -1561,7 +1561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1624,12 +1624,14 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -1654,6 +1656,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -1689,11 +1692,13 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -1701,6 +1706,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -1710,6 +1716,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -1743,6 +1750,8 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -1780,6 +1789,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -1819,6 +1829,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -1829,9 +1840,11 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -1877,12 +1890,14 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -1907,6 +1922,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -1983,6 +1999,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2001,6 +2018,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2024,6 +2042,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2095,6 +2114,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2105,6 +2125,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2119,6 +2140,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2176,6 +2198,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2212,6 +2235,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2232,16 +2256,19 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2279,6 +2306,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2292,13 +2320,16 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2335,23 +2366,28 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2374,6 +2410,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2411,6 +2448,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2434,6 +2472,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2446,6 +2485,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2459,6 +2499,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2479,48 +2520,7 @@
        " 0,\n",
        " 0,\n",
        " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
-       " 0,\n",
+       " 1,\n",
        " 0,\n",
        " 0,\n",
        " 0,\n",
@@ -2570,7 +2570,7 @@
        " ...]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2578,14 +2578,35 @@
    "source": [
     "# Utilice este espacio para escribir el código.\n",
     "is_bush=[]\n",
-    "for i in target_names:\n",
-    "    if i == 'George W Bush':\n",
+    "for i in lfw_dataset.target:\n",
+    "    if target_names[i] == 'George W Bush':\n",
     "        it_is=1\n",
     "        is_bush.append(it_is)\n",
     "    else:\n",
     "        it_is=0\n",
     "        is_bush.append(it_is)\n",
     "is_bush"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "2b817a70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13233\n",
+      "(13233, 2914)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(len(is_bush))\n",
+    "print(X.shape)"
    ]
   },
   {
@@ -2606,7 +2627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2614,7 +2635,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
-    "\n",
+    "y=is_bush\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "                                        X,\n",
@@ -2643,17 +2664,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Utilice este espacio para escribir el código.\n",
     "from scipy.linalg import svd # Cargamos la función SVD\n",
     "\n",
+    "# Estandarizamos los datos\n",
+    "mu1 = X_train.mean()\n",
+    "sigma1 = X_train.std()\n",
+    "X_train1 = (X_train - mu1)/sigma1\n",
+    "\n",
     "#Extraemos las matrices SVD para el set de entrenamiento:\n",
-    "U_tr,S_tr,V_tr=svd(X_train)\n",
+    "U_tr,S_tr,V_tr=svd(X_train1)\n",
+    "\n",
+    "# Estandarizamos los datos\n",
+    "mu2 = X_test.mean()\n",
+    "sigma2 = X_test.std()\n",
+    "X_test1 = (X_test - mu2)/sigma2\n",
+    "\n",
     "#Extraemos las matrices SVD para el set de prueba:\n",
-    "U_te,S_te,V_te=svd(X_test)\n"
+    "U_te,S_te,V_te=svd(X_test1)\n"
    ]
   },
   {
@@ -2678,15 +2710,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_sag.py:352: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(max_iter=1000, random_state=10101, solver='sag')"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "Modelo_Logistico = LogisticRegression(solver='sag',random_state=10101,max_iter=1000)\n",
     "\n",
-    "# Utilice este espacio para escribir el código restante."
+    "# Utilice este espacio para escribir el código restante.\n",
+    "k=1000\n",
+    "#svd_truncada(k,X_test1)\n",
+    "\n",
+    "\n",
+    "Modelo_Logistico.fit(X = X_train1, y = y_train)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "7a489f8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precisión del modelo: 0.960710238005289\n"
+     ]
+    }
+   ],
+   "source": [
+    "# \n",
+    "y_pred = Modelo_Logistico.predict(X_test1)\n",
+    "# Calcular la precisión del modelo\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print('Precisión del modelo:', accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "22aa8ff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "X has 2915 features, but LogisticRegression is expecting 2914 features as input.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\maria\\OneDrive\\Documentos\\Alejandra\\Uniandes Maestria\\Semestre 2\\ML y Lenguaje Natural\\GitHub\\AprendizajeNoSupervisado\\S2_LC_Taller_SVD.ipynb Celda 59\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/maria/OneDrive/Documentos/Alejandra/Uniandes%20Maestria/Semestre%202/ML%20y%20Lenguaje%20Natural/GitHub/AprendizajeNoSupervisado/S2_LC_Taller_SVD.ipynb#Y116sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m k\u001b[39m=\u001b[39m\u001b[39m1000\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/maria/OneDrive/Documentos/Alejandra/Uniandes%20Maestria/Semestre%202/ML%20y%20Lenguaje%20Natural/GitHub/AprendizajeNoSupervisado/S2_LC_Taller_SVD.ipynb#Y116sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m test_truncado\u001b[39m=\u001b[39msvd_truncada(k,X_test1)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/maria/OneDrive/Documentos/Alejandra/Uniandes%20Maestria/Semestre%202/ML%20y%20Lenguaje%20Natural/GitHub/AprendizajeNoSupervisado/S2_LC_Taller_SVD.ipynb#Y116sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m y_pred \u001b[39m=\u001b[39m Modelo_Logistico\u001b[39m.\u001b[39;49mpredict(test_truncado)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/maria/OneDrive/Documentos/Alejandra/Uniandes%20Maestria/Semestre%202/ML%20y%20Lenguaje%20Natural/GitHub/AprendizajeNoSupervisado/S2_LC_Taller_SVD.ipynb#Y116sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Calcular la precisión del modelo\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/maria/OneDrive/Documentos/Alejandra/Uniandes%20Maestria/Semestre%202/ML%20y%20Lenguaje%20Natural/GitHub/AprendizajeNoSupervisado/S2_LC_Taller_SVD.ipynb#Y116sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m accuracy \u001b[39m=\u001b[39m accuracy_score(y_test, y_pred)\n",
+      "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_base.py:425\u001b[0m, in \u001b[0;36mLinearClassifierMixin.predict\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    411\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mpredict\u001b[39m(\u001b[39mself\u001b[39m, X):\n\u001b[0;32m    412\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    413\u001b[0m \u001b[39m    Predict class labels for samples in X.\u001b[39;00m\n\u001b[0;32m    414\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    423\u001b[0m \u001b[39m        Vector containing the class labels for each sample.\u001b[39;00m\n\u001b[0;32m    424\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 425\u001b[0m     scores \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdecision_function(X)\n\u001b[0;32m    426\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(scores\u001b[39m.\u001b[39mshape) \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m    427\u001b[0m         indices \u001b[39m=\u001b[39m (scores \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39mint\u001b[39m)\n",
+      "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_base.py:407\u001b[0m, in \u001b[0;36mLinearClassifierMixin.decision_function\u001b[1;34m(self, X)\u001b[0m\n\u001b[0;32m    387\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    388\u001b[0m \u001b[39mPredict confidence scores for samples.\u001b[39;00m\n\u001b[0;32m    389\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    403\u001b[0m \u001b[39m    this class would be predicted.\u001b[39;00m\n\u001b[0;32m    404\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    405\u001b[0m check_is_fitted(\u001b[39mself\u001b[39m)\n\u001b[1;32m--> 407\u001b[0m X \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_data(X, accept_sparse\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcsr\u001b[39;49m\u001b[39m\"\u001b[39;49m, reset\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m    408\u001b[0m scores \u001b[39m=\u001b[39m safe_sparse_dot(X, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcoef_\u001b[39m.\u001b[39mT, dense_output\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m) \u001b[39m+\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mintercept_\n\u001b[0;32m    409\u001b[0m \u001b[39mreturn\u001b[39;00m scores\u001b[39m.\u001b[39mravel() \u001b[39mif\u001b[39;00m scores\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m \u001b[39melse\u001b[39;00m scores\n",
+      "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:585\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[0;32m    582\u001b[0m     out \u001b[39m=\u001b[39m X, y\n\u001b[0;32m    584\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m no_val_X \u001b[39mand\u001b[39;00m check_params\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mensure_2d\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mTrue\u001b[39;00m):\n\u001b[1;32m--> 585\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_check_n_features(X, reset\u001b[39m=\u001b[39;49mreset)\n\u001b[0;32m    587\u001b[0m \u001b[39mreturn\u001b[39;00m out\n",
+      "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:400\u001b[0m, in \u001b[0;36mBaseEstimator._check_n_features\u001b[1;34m(self, X, reset)\u001b[0m\n\u001b[0;32m    397\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[0;32m    399\u001b[0m \u001b[39mif\u001b[39;00m n_features \u001b[39m!=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_features_in_:\n\u001b[1;32m--> 400\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    401\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mX has \u001b[39m\u001b[39m{\u001b[39;00mn_features\u001b[39m}\u001b[39;00m\u001b[39m features, but \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    402\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mis expecting \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_features_in_\u001b[39m}\u001b[39;00m\u001b[39m features as input.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    403\u001b[0m     )\n",
+      "\u001b[1;31mValueError\u001b[0m: X has 2915 features, but LogisticRegression is expecting 2914 features as input."
+     ]
+    }
+   ],
+   "source": [
+    "k=1000\n",
+    "test_truncado=svd_truncada(k,X_test1)\n",
+    "\n",
+    "y_pred = Modelo_Logistico.predict(test_truncado)\n",
+    "# Calcular la precisión del modelo\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print('Precisión del modelo:', accuracy)"
    ]
   },
   {
